--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 
   <head>
     <title>Field</title>
-    <meta property="og:title" content="123">
-    <meta property="og:description" content="123">
-    <meta property="og:image" content="123">
+    <meta property="og:title" content="Rovers">
+    <meta property="og:description" content="Cars">
+    <meta property="og:image" content="https://3dnews.ru/assets/external/illustrations/2014/08/12/825794/rover1.jpg">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+    
 
   </head>
 
